--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
+#.env
 .env.backup
 .env.production
 .phpactor.json
@@ -15,7 +15,7 @@ Homestead.yaml
 auth.json
 npm-debug.log
 yarn-error.log
-docker-compose.yml
+#docker-compose.yml
 /.fleet
 /.idea
 /.vscode
