--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ APP_FAKER_LOCALE=en_US
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
+APP_PORT=8080
+
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
@@ -22,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=C:\laragon\www\bem-te-vi-social\database\database.sqlite
+DB_DATABASE=C:\laragon\www\bem-te-vi-social\database\database.sqlite #/var/www/html/database/database.sqlite
 DB_USERNAME=sail
 DB_PASSWORD=password
 
@@ -52,8 +54,8 @@ MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="contato@bemtevisocial.com.br"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS=no-reply@bem-te-vi-social.com
+MAIL_FROM_NAME="Bem-te-vi Social"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
