--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - '${APP_PORT:-80}:80'
+            - '${APP_PORT:-8080}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
             WWWUSER: '${WWWUSER}'
@@ -25,7 +25,8 @@ services:
             - mailpit
 
     mailpit:
-        image: axllent/mailpit:latest
+        image: axllent/mailpit
+        container_name: mailpit
         ports:
             - "1025:1025" # Porta SMTP para Laravel
             - "8025:8025" # Interface web do Mailpit
