--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/ui": "^4.5"
     },
     "require-dev": {
+        "beyondcode/laravel-er-diagram-generator": "^4.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "mockery/mockery": "^1.6",
